add search tasks api modify
